// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FrontPage /> renders correctly 1`] = `
<div>
  <PostPreviewList
    posts={Array []}
  />
  <div
    className="loaderWrapper"
  >
    <LoadPostsButton
      loadPosts={[Function]}
    />
  </div>
</div>
`;

exports[`<FrontPage /> renders correctly on error 1`] = `
<div>
  Kunne ikke laste inn forsiden.
</div>
`;

exports[`<FrontPage /> renders correctly while loading 1`] = `
<div>
  <div
    className="loaderWrapper"
  >
    <Loader />
  </div>
</div>
`;
